fix a few things

--- a/java-boot-angular-book/src/main/resources/static/index.html
+++ b/java-boot-angular-book/src/main/resources/static/index.html
@@ -49,7 +49,7 @@
     <a ng-click="getAllGreetings()">Get all Greetings</a><br/>
     <br/> <br/>
     <div ng-repeat="greeting in greetings">
-        {{greeting.username}} {{usr.message}}
+        {{greeting.username}} {{greeting.message}}
     </div>
 </div>
 </body>
